# gpt-command-oneliner

./: .gitignore  README.md  ask_gpt.py  pyproject.toml
